# AnkiPolyglot

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  style.css
.github/workflows/: gh-pages-deploy.yml
assets/: style.css
cardtypes/Active/: Back.html  Front.html
cardtypes/Passive/: Back.html  Front.html
cardtypes/Writing/: Back.html  Front.html
src/: main.rs
