[package]
name = "polyglot-anki"
version = "0.1.0"
edition = "2024"

[dependencies]
genanki-rs-rev = {git="https://github.com/viniciusdutra314/genanki-wasm"}
leptos = { version = "0.8.20", features = ["csr"] }
wasm-bindgen = "0.2.126"
js-sys = "0.3.103"
web-sys = {version="0.3.103",
features=[
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Window",
    "Document",
    "HtmlAnchorElement",
]
}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"
